fixed overflow,  chevron position

--- a/src/components/ToTop/ToTop.module.scss
+++ b/src/components/ToTop/ToTop.module.scss
@@ -48,7 +48,7 @@
   opacity: 0;
 }
 .iconBox {
-  width: 45px;
+  // width: 45px;
   height: 40px;
 }
 .scrollTop:hover::after {
